--- a/DemoQAProject/.classpath
+++ b/DemoQAProject/.classpath
@@ -26,5 +26,7 @@
 	<classpathentry kind="lib" path="E:/Tops 2024/Selenium/jar_files/jar_files/selenium-remote-driver-3.141.0.jar"/>
 	<classpathentry kind="lib" path="E:/Tops 2024/Selenium/jar_files/jar_files/selenium-safari-driver-3.141.0.jar"/>
 	<classpathentry kind="lib" path="E:/Tops 2024/Selenium/jar_files/jar_files/selenium-support-3.141.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
